// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack development config matches snapshot 1`] = `
Object {
  "devServer": Object {
    "open": true,
  },
  "devtool": "eval-source-map",
  "entry": Object {
    "index": "<PROJECT_ROOT>/client/index.ts",
  },
  "mode": "development",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "options": Object {
          "configFile": "<PROJECT_ROOT>/config/babel.config.js",
        },
        "test": /\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/i,
        "use": Array [
          "style-loader",
          "css-loader",
        ],
      },
    ],
  },
  "optimization": Object {
    "minimize": false,
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "cache": true,
          "cacheKeys": [Function],
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "sourceMap": undefined,
          "terserOptions": Object {
            "warnings": false,
          },
          "test": /\\\\\\.m\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "splitChunks": Object {
      "cacheGroups": Object {
        "vendors": Object {
          "priority": -10,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "async",
      "minChunks": 1,
      "minSize": 30000,
      "name": true,
    },
  },
  "output": Object {
    "filename": "[name].[chunkhash].js",
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/",
  },
  "plugins": Array [
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    ESLintWebpackPlugin {
      "options": Object {
        "cache": true,
        "cacheLocation": "node_modules/.cache/eslint-cache/",
        "emitError": false,
        "emitWarning": true,
        "extensions": Array [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "failOnError": false,
        "files": ".",
        "lintDirtyModulesOnly": false,
        "reportUnusedDisableDirectives": "warn",
      },
    },
    [Function],
    DefinePlugin {
      "definitions": Object {
        "__DEV__": "true",
      },
    },
    HtmlWebpackPlugin {
      "assetJson": undefined,
      "childCompilerHash": undefined,
      "hash": undefined,
      "options": Object {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "body",
        "meta": Object {},
        "minify": "auto",
        "scriptLoading": "blocking",
        "showErrors": true,
        "template": "<PROJECT_ROOT>/client/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "trshcmpctr",
        "xhtml": false,
      },
      "version": 4,
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;

exports[`webpack production config matches snapshot 1`] = `
Object {
  "devServer": Object {
    "open": true,
  },
  "devtool": "source-map",
  "entry": Object {
    "index": "<PROJECT_ROOT>/client/index.ts",
  },
  "mode": "production",
  "module": Object {
    "rules": Array [
      Object {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "options": Object {
          "configFile": "<PROJECT_ROOT>/config/babel.config.js",
        },
        "test": /\\\\\\.\\(js\\|jsx\\|ts\\|tsx\\)\\$/,
      },
      Object {
        "test": /\\\\\\.css\\$/i,
        "use": Array [
          "style-loader",
          "css-loader",
        ],
      },
    ],
  },
  "optimization": Object {
    "minimize": true,
    "minimizer": Array [
      TerserPlugin {
        "options": Object {
          "cache": true,
          "cacheKeys": [Function],
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minify": undefined,
          "parallel": true,
          "sourceMap": undefined,
          "terserOptions": Object {
            "warnings": false,
          },
          "test": /\\\\\\.m\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
    ],
    "splitChunks": Object {
      "cacheGroups": Object {
        "vendors": Object {
          "priority": -10,
          "test": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
        },
      },
      "chunks": "async",
      "minChunks": 1,
      "minSize": 30000,
      "name": true,
    },
  },
  "output": Object {
    "filename": "[name].[chunkhash].js",
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/",
  },
  "plugins": Array [
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": Array [],
      "cleanOnceBeforeBuildPatterns": Array [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": Array [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    ESLintWebpackPlugin {
      "options": Object {
        "cache": true,
        "cacheLocation": "node_modules/.cache/eslint-cache/",
        "emitError": true,
        "emitWarning": false,
        "extensions": Array [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "failOnError": true,
        "files": ".",
        "lintDirtyModulesOnly": false,
        "reportUnusedDisableDirectives": null,
      },
    },
    [Function],
    DefinePlugin {
      "definitions": Object {
        "__DEV__": "false",
      },
    },
    HtmlWebpackPlugin {
      "assetJson": undefined,
      "childCompilerHash": undefined,
      "hash": undefined,
      "options": Object {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": Array [],
        "favicon": false,
        "filename": "index.html",
        "hash": false,
        "inject": "body",
        "meta": Object {},
        "minify": "auto",
        "scriptLoading": "blocking",
        "showErrors": true,
        "template": "<PROJECT_ROOT>/client/index.html",
        "templateContent": false,
        "templateParameters": [Function],
        "title": "trshcmpctr",
        "xhtml": false,
      },
      "version": 4,
    },
  ],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
    ],
  },
}
`;
